--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 1440px) {
   .name {
-    font-size: 4em;
-    height: 50vh;
+    font-size: 5em;
+    height: 40vh;
   }
 
   .lastname {
@@ -12,31 +12,35 @@
   }
   
   #statement {
-    height: 25vh;
-    font-size: 2em;
+    height: 45vh;
+    font-size: 4em;
+    z-index: 2;
   }
   
   .title {
     grid-column: 1/4;
     grid-row: 1/3;
+    text-align: center;
   }
 
   .outof {
-    margin-top: 2em;
-    grid-column: 2/3;
+    margin-top: 3em;
+    grid-column: 2/4;
     grid-row: 2/3;
-    /* margin-left: -12em; */
+    margin-left: -2em;
   }
 
   .denver {
     grid-row: 3/4;
+    
   }
 
   .colorado {
     margin-right: 2em;
     margin-top: 2em;
-    grid-column: 3/5;
+    grid-column: 2/4;
     grid-row: 3/4;
+    padding-top: 1em;
   }
 
   .abouttrans {
@@ -60,11 +64,18 @@
   }
 
   #creations {
-    gap: 3em;
+    background-color: #0b0c10;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex-direction: row;
     margin-left: 2em;
     margin-right: 2em;
   }
 
+  .card {
+    max-width: 20vw;
+  }
   .cardtext {
     font-size: 2.2em;
   }
@@ -106,6 +117,9 @@
     padding-right: 2em;
   }
   
+  .guitars {
+    max-width: 50vw;
+  }
   form {
     padding-top: 2em;
     max-width: 900px;
