--- a/css/style.css
+++ b/css/style.css
@@ -21,22 +21,38 @@ body {
 .name {
   position: relative;
   top: 1em;
-  height: 20vh;
+  height: 15vh;
   width: 100%;
   font-family: "Poppins", sans-serif;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 3fr 1fr;
   grid-template-rows: 1fr 2fr;
-  
 }
 
 .firstname {
+  position: relative;
+  opacity: 0;
   font-size: 3.5em;
-  color: #fff;
+  color: #79896E;
   opacity: .8;
   grid-column: 2/3;
   grid-row: 1/2;
   font-weight: 900;
+  animation: slidekel 1s linear forwards;
+}
+
+@keyframes slidekel {
+  0% {
+    left: -1000px;
+    opacity: 0;
+  }
+  50% {
+    opacity: .4;
+  }
+  100% {
+    left: 0;
+    opacity: 1;
+  }
 }
 
 .lastname {
@@ -56,23 +72,36 @@ body {
   font-weight: 900;
   padding-bottom: 10px;
   transform: rotate(-10deg);
+  opacity: 0;
+  animation: slidestrother .1s linear forwards;
 }
 
-.navbarbottom {
-  display: none;
+@keyframes slidestrother {
+  0% {
+    right: -1000px;
+    opacity: 0;
+  }
+  75% {
+    opacity: .6;
+  }
+  100% {
+    opacity: 1;
+    right: 90px;
+  }
 }
 
-.navbarwide {
+/* .navbar {
   display: none;
-}
+} */
                     /* !ABOUT SECTION */
 .aboutsec {
+  
   margin-top: 3em;
   padding-left: .5em;
   padding-right: .5em;
   display: grid;
   font-size: 1.5em;
-  height: 65vh;
+  height: 40vh;
   width: 100%;
 }
 
@@ -81,7 +110,6 @@ body {
   color: #fff;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr 2fr;
-  /* grid-template-rows: repeat(2, 1fr 2fr);  */
   grid-template-rows: auto;
   padding-left: 1em;
   padding-right: .5em;
@@ -94,24 +122,29 @@ body {
 
 .jobtitle {
   position: relative;
-  opacity: 1;
+  opacity: 0;
   font-family: 'Poppins', sans-serif;
   font-size: 1.2em;
   font-weight: 900;
-  animation: slide .7s ease-in-out;
+  animation: slide 1s ease-in-out forwards;
+  animation-delay: 2s;
 }
 
 @keyframes slide {
   0% {
-    left: -1000px;
+    left: -10em;
     opacity: 0;
   }
   75% {
     opacity: .6;
-    
+    transform: rotate(20deg);
+  }
+  99% {
+    opacity: 7;
+    transform: rotate(20deg);
   }
   100% {
-    left: 0;
+    left: 1em;
     opacity: 1;
   }
 }
@@ -124,11 +157,12 @@ body {
 
 .outof-word {
   position: relative;
-  opacity: 1;
+  opacity: 0;
   font-family: 'Poppins', sans-serif;
   font-size: 1em;
   text-align: center;
-  animation: slideleft 1s ease-in-out;
+  animation: slideleft 1s ease-in-out forwards;
+  animation-delay: 1.5s;
 }
 
 @keyframes slideleft {
@@ -154,16 +188,17 @@ body {
 
 .city {
   position: relative;
-  opacity: 1;
+  opacity: 0;
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
   font-size: 1.5em;
-  animation: slidedenver 1.3s ease-in-out;
+  animation: slidedenver 1.3s ease-in-out forwards;
+  animation-delay: 2s;
 }
 
 @keyframes slidedenver {
   0% {
-    left: -1000px;
+    left: -10em;
     opacity: 0;
   }
   75% {
@@ -171,7 +206,7 @@ body {
     
   }
   100% {
-    left: 0;
+    left: 1em;
     opacity: 1;
   }
 }
@@ -184,14 +219,16 @@ body {
 
 .state {
   position: relative;
-  opacity: 1;
+  opacity: 0;
   margin-left: 1em;
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
   font-size: 1.5em;
   transform: rotate();
-  animation: slidestate 1.2s ease-in;
+  animation: slidestate 1.2s ease-in forwards;
+  animation-delay: 2s;
 }
+
 
 @keyframes slidestate {
   0% {
@@ -211,7 +248,7 @@ body {
 
 .abouttrans {
   position: relative;
-  height: 15vh;
+  height: 20vh;
   width: 100vw;
   clip-path: polygon(0 0, 100% 87%, 100% 100%, 0 100%);
   background-color: rgb(17,94,108); 
@@ -245,7 +282,7 @@ body {
 .skillgallery img {
   margin: .5em;
   width: 10vw;
-  height: 10vh;
+  height: 5vh;
 }
 
 .skill {
@@ -258,12 +295,13 @@ body {
 }
 
 .icon {
+  max-width: 200px;
   position: relative;
 }
 
 .icon:hover {
   transform: rotate();
-  animation: spin 2s ease-in-out infinite;
+  animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
@@ -277,15 +315,9 @@ body {
 
 
 #boot {
-  position: relative;
   background: rgb(87,153,197);
   background: linear-gradient(53deg, rgba(87,153,197,1) 45%, rgba(145,128,33,0.9066001400560224) 100%);
 }
-
-/* .icon-boot:hover {
-  transition: spin 2s ease;
-  transform: rotate(360);
-} */
 
 .desc {
   padding-top: 5px;
@@ -324,7 +356,6 @@ span.period {
 
 #creations {
   padding-top: 1em;
-  background-color: rgba(255, 255, 255, 1);
   display: grid;
   grid-template-columns: 1fr 15fr 1fr;
   grid-template-rows: auto;
@@ -431,7 +462,7 @@ span.period {
   background-color: steeleblue;
   transform: rotate();
   transform: skew();
-  animation: shiver .2s ease-in;
+  animation: shiver .2s linear;
 } 
 
 @keyframes shiver {
@@ -500,21 +531,7 @@ span.period {
 .guitars {
   grid-column: 2/5;
   grid-row: 1/4;
-  /* height: 400px; */
   width: 70vw;
-}
-
-.guitars {
-  position: relative;
-	-webkit-transform: rotate(0) scale(1);
-	transform: rotate(0) scale(1);
-	-webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-  top: -2.5em;
-}
-.guitars:hover {
-	-webkit-transform: rotate(10deg) scale(1.2);
-  transform: rotate(10deg) scale(1.2);
 }
 
 #contactme {
@@ -544,22 +561,42 @@ button {
   height: 20vh;
 }
 /* !Navigation */
-.navbar {
-  font-size: 1em;
-  padding: 5px;
-  height: 10vh;
-  display: flex;
-  justify-content: space-between;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
-  background-color: #0b0c10;
-  opacity: .8;
-  z-index: 2;
-}
+.navbarbottom {
+    background-color: rgba(0,0,0,.7);
+    height: 8vh;
+    width: 100vw;
+    position: fixed;
+    overflow: hidden;
+    bottom: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* padding-left: 1em;
+    padding-right: 1em; */
+    /* padding-bottom: 1em; */
+    font-family: "Poppins", sans-serif;
+    font-size: 1.2em;
+    font-weight: 900;
+    z-index: 2;
+  }
 
-.navbar a {
+  .navbarbottom a {
+    color: #fff;
+    align-items: center;
+    text-align: center;
+    padding: 1em;
+  }
+
+  .navbarbottom a:hover {
+    color: rgba(169,161,103,.6);
+  }
+
+  .periodw {
+    color: steelblue;
+    font-size: 1.5em;
+  }
+
+/* .navbar a {
   margin: auto;
   font-family: "Poppins", sans-serif;
   font-weight: 900;
@@ -573,7 +610,7 @@ button {
 
 .active {
   color:rgba(169,161,103,.6);
-}
+} */
 
 #skills {
   padding-right: 1em;
