--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat:wght@600;900&family=Poppins:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 @media only screen and (min-width: 1440px) {
   .name {
     font-size: 5em;
-    height: 40vh;
+    height: 35vh;
   }
 
   .lastname {
@@ -12,7 +15,7 @@
   }
   
   #statement {
-    height: 45vh;
+    height: 35vh;
     font-size: 4em;
     z-index: 2;
   }
@@ -24,33 +27,40 @@
   }
 
   .outof {
-    margin-top: 3em;
+    position: relative;
+    top: 2em;
     grid-column: 2/4;
-    grid-row: 2/3;
+    grid-row: 1/3;
     margin-left: -2em;
   }
 
   .denver {
+    position: relative;
+    top: 1em;
+    grid-column: 2/3;
     grid-row: 3/4;
+    text-align: left;
     
   }
 
   .colorado {
+    position: relative;
+    top: 3.5em;
     margin-right: 2em;
-    margin-top: 2em;
+    /* margin-top: 2em; */
     grid-column: 2/4;
-    grid-row: 3/4;
+    grid-row: 2/4;
     padding-top: 1em;
   }
 
   .abouttrans {
     height: 25vh;
   }
-  
+ 
   .myskills {
     font-size: 3em;
   }
-  
+
   .desc {
     font-size: 1em;
   }
@@ -69,8 +79,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     flex-direction: row;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 4em;
+    margin-right: 4em;
+    z-index: 2;
   }
 
   .card {
@@ -84,14 +95,6 @@
     height: 500px;
   }
 
-  .button {
-    padding-bottom: 2em;
-  }
-
-  .btnproject {
-    font-size: 1.3em;
-  }
-  
   .bitaboutme {
     font-size: 3.5em;
   }
@@ -120,6 +123,7 @@
   .guitars {
     max-width: 50vw;
   }
+
   form {
     padding-top: 2em;
     max-width: 900px;
@@ -138,4 +142,13 @@
     font-size: 1.8em;
   }
   
+  .navbarbottom a {
+    color: #428693;
+  }
+
+  .periodw {
+    color: rgb(182, 175, 126);
+    font-size: 1.5em;
+  }
+
 }
