--- a/css/desktop.css
+++ b/css/desktop.css
@@ -2,22 +2,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 @media only screen and (min-width: 1440px) {
+
   .name {
-    font-size: 5em;
-    height: 35vh;
+    text-align: center;
+    width: 100vw;
+    /* height: 20vh; */
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr;
+    font-size: 4em;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  .firstname {
+    bottom: -.3em;
   }
 
   .lastname {
-    margin-top: .2em;
+    left: -1.9em;
+    top: -.5em;
     transform: rotate(-5deg);
     background-size: 85% 130%;
-    background-position: 0 100%;
+    background-position: 65% 100%;
   }
   
   #statement {
-    height: 35vh;
-    font-size: 4em;
-    z-index: 2;
+    margin: 0 auto;
+    position: relative;
+    /* top: 3em; */
+    grid-template-rows: 1fr 2fr 1fr 1fr 1fr;
+    grid-template-rows: ;
+    /* height: 35vh; */
+    font-size: 2em;
+    /* z-index: 2; */
   }
   
   .title {
@@ -26,19 +44,30 @@
     text-align: center;
   }
 
+  @keyframes slide {
+  0% {
+    top: -5em;
+    opacity: 0;
+  }
+ 100% {
+   top: 1em;
+    opacity: 1;
+  }
+} 
+
   .outof {
     position: relative;
     top: 2em;
-    grid-column: 2/4;
-    grid-row: 1/3;
+    grid-column: 2/3;
+    grid-row: 2/3;
     margin-left: -2em;
   }
 
   .denver {
     position: relative;
     top: 1em;
-    grid-column: 2/3;
-    grid-row: 3/4;
+    grid-column: 3/4;
+    grid-row: 2/3;
     text-align: left;
     
   }
@@ -57,6 +86,11 @@
     height: 25vh;
   }
  
+  .skillgallery {
+    margin-left: 10em;
+    margin-right: 10em;
+  }
+
   .myskills {
     font-size: 3em;
   }
@@ -75,23 +109,45 @@
 
   #creations {
     background-color: #0b0c10;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex-direction: row;
-    margin-left: 4em;
-    margin-right: 4em;
-    z-index: 2;
+    display: grid;
+    grid-template-columns: 1fr 10fr 10fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 5em;
+  }
+ 
+  .cardcontainer:nth-child(1) {
+    grid-row: 1/2;
+    grid-column: 2/3;
   }
 
-  .card {
-    max-width: 20vw;
+  .cardcontainer:nth-child(2) {
+    grid-row: 1/2;
+    grid-column: 3/4;
   }
+
+  .cardcontainer:nth-child(3) {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+
+  .cardcontainer:nth-child(4) {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    width: 100%;
+  }
+
   .cardtext {
+    padding-bottom: 2em;
     font-size: 2.2em;
+  }
+
+  img.project {
+    border: none;
   }
   
   .cardimg img {
+    border: none;
+    background-color: #0b0c10;
     height: 500px;
   }
 
@@ -104,7 +160,7 @@
   }
   
   .moreabout {
-    max-width: 850px;
+    max-width: 1000px;
   }
 
   .icons {
@@ -141,9 +197,10 @@
   form button {
     font-size: 1.8em;
   }
-  
+
   .navbarbottom a {
-    color: #428693;
+    color: #429aac;
+    font-size: 2.5em;
   }
 
   .periodw {
