--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
+  /* border: 1px solid orange; */
 }
 
 html {
@@ -17,36 +19,37 @@ body {
                        /* !HEADER */
 .container {
   display: grid;
-  margin: 0;
 }
 
 .name {
-  position: relative;
-  top: 3em;
+
+  /* position: relative; */
+  /* top: 2em; */
   /* height: 15vh; */
-  width: 100%;
+  width: 100vw;
   font-family: "Poppins", sans-serif;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 3fr 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr auto;
+  padding-bottom: .5em;
 }
 
 .firstname {
   position: relative;
-  opacity: 0;
+  opacity: 1;
   font-size: 3.5em;
   color: #79896E;
   opacity: .8;
-  grid-column: 2/3;
+  grid-column: 2/4;
   grid-row: 1/2;
   font-weight: 900;
 }
 
 .lastname {
-  width: 75vw;
+  /* width: 75vw; */
   font-size: 3.5em;
   position: relative;
-  left: -1em;
+  /* left: -1em; */
   top: -1em;
   grid-column: 3/6;
   grid-row: 2/3;
@@ -57,30 +60,26 @@ body {
   background-size: 460px 120px;
   background-position: 0% 80%;
   font-weight: 900;
-  padding-bottom: 10px;
   transform: rotate(-10deg);
 }
                     /* !ABOUT SECTION */
 .aboutsec {
   position: relative;
   top: -2em;
-  margin-top: 1em;
-  padding-left: .5em;
-  padding-right: .5em;
+  padding-left: 1em;
+  padding-right: 1em;
   display: grid;
   font-size: 1.5em;
-  /* height: 40vh; */
-  width: 100%;
+  width: 100vw;
 }
 
 #statement {
-  width: 100%;
+  width: 100vw;
   color: #fff;
   display: grid;
   grid-template-columns: 1fr 1fr 2fr 2fr;
   grid-template-rows: auto;
   padding-left: 1em;
-  padding-right: .5em;
 }
 
 .title {
@@ -95,101 +94,40 @@ body {
   font-size: 1.2em;
   font-weight: 900;
   animation: slide 1s ease-out forwards;
-  animation-delay: 1s;
+  animation-delay: .5s;
 }
 
 @keyframes slide {
   0% {
-    left: -5em;
+    top: -5em;
     opacity: 0;
   }
- 51% {
-    top: .3em;
-  }
-  53% {
-    top: 0em
-  }
-  55% {
-    top: .3em;
-  }
-  57% {
-    top: 0em
-  }
-  61% {
-    top: .3em;
-  }
-  63% {
-    top: 0em
-  }
-  65% {
-    top: .3em;
-  }
-  66% {
-    top: 0em
-  }
-  67% {
-    top: .5em;
-  }
-  68% {
-    top: 0em
-  }
-  75% {
-    opacity: .6;
-    transform: rotate(30deg);
-  }
-  77% {
-    top: .5em;
-  }
-  79% {
-    top: 0em
-  }
-  81% {
-    top: .5em;
-  }
-  83% {
-    top: 0em
-  }
-  91% {
-    top: .5em;
-  }
-  93% {
-    top: 0em
-  }
-  97% {
-    top: 0em;
-  }
-  98% {
-    top: 0em
-  }
-  99% {
-    opacity: 7;
-    transform: rotate(30deg);
-  }
-  100% {
-    left: 1em;
+ 100% {
+   top: 0;
     opacity: 1;
   }
-}
+} 
 
 .outof {
   display: grid;
   grid-column: 2/4;
   grid-row: 3/4;
-}
+} 
 
 .outof-word {
+  color: #79896E;
   position: relative;
   opacity: 0;
   font-family: 'Poppins', sans-serif;
   font-size: 1em;
   text-align: center;
   animation: slideleft 1s ease-in-out forwards;
-  animation-delay: 2s;
+  animation-delay: 1s;
 }
 
 @keyframes slideleft {
   0% {
-    left:  5em;
+    left:  2em;
     opacity: 0;
   }
   75% {
@@ -204,7 +142,7 @@ body {
 .denver {
   margin-top: 1em;
   grid-row: 4/5;
-  grid-column: 3/4;
+  grid-column: 1/4;
   text-align: center;
 }
 
@@ -215,12 +153,27 @@ body {
   font-weight: 900;
   font-size: 1.5em;
   animation: slidedenver 1.3s ease-in-out forwards;
-  animation-delay: 2.5s;
+  animation-delay: 2s;
 }
 
 @keyframes slidedenver {
   0% {
-    left: -5em;
+    transform: translate(0 50px);
+    opacity: 0;
+  }
+  75% {
+    opacity: .6;
+    
+  }
+  100% {
+    transform: translate(50px 0px);
+    opacity: 1;
+  }
+}
+
+@keyframes slidestate {
+  0% {
+    left: -2em;
     opacity: 0;
   }
   75% {
@@ -235,45 +188,23 @@ body {
 
 .colorado {
   grid-row: 5/6;
-  grid-column: 2/5;
+  grid-column: 2/4;
   text-align: right;
 }
 
 .state {
-  position: relative;
+  /* position: relative; */
   opacity: 0;
-  margin-left: 1em;
+  /* left: -1em; */
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
   font-size: 1.5em;
-  animation: slidestate 1s ease-in forwards;
-  animation-delay: 3s;
+  animation: slidestate 1.3s ease-in forwards;
+  animation-delay: 2.5s;
 }
-
-
-@keyframes slidestate {
-  0% {
-    left:  5em;
-    opacity: 0;
-    transform: scale(.2);
-    transform: rotate(200deg);
-  }
-  75% {
-    opacity: .6;
-    transform: scale(3);
-    /* transform: rotate(270deg); */
-  }
-  100% {
-    left: 0;
-    opacity: 1;
-    transform: rotate(360deg);
-    transform: scale(1);
-  }
-} 
 
 .abouttrans {
   position: relative;
-  top: -1em;
   height: 10vh;
   width: 100vw;
   clip-path: polygon(0 0, 100% 87%, 100% 100%, 0 100%);
@@ -338,12 +269,6 @@ body {
   }
 }
 
-
-#boot {
-  background: rgb(87,153,197);
-  background: linear-gradient(53deg, rgba(87,153,197,1) 45%, rgba(145,128,33,0.9066001400560224) 100%);
-}
-
 .desc {
   padding-top: 5px;
   border-top: 1px solid #fff;
@@ -380,29 +305,31 @@ span.period {
 }
 
 #creations {
-  padding-top: 1em;
-  display: grid;
-  grid-template-columns: 1fr 15fr 1fr;
-  grid-template-rows: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 .cardcontainer {
-  display: grid;
-  grid-template-columns: 1fr 15fr 1fr;
-  grid-template-rows: auto;
-  grid-column: 2/3;
+  margin-bottom: 5em;
   overflow: hidden;
-  padding-bottom: 2.5em;
+  padding-bottom: 2em;
+  box-shadow: 5px 5px 50px 10px rgba(152, 154, 155, 0.1);
 }
 
 .card {
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
-  display: grid;
-  grid-column: 2/3;
+  border: none;
+}
+
+.card a {
+  text-decoration: none;
 }
 
 .cardimg img {
-  /* height: 250px; */
+  height: 250px;
   width: 100%;
 }
 
@@ -419,11 +346,14 @@ span.period {
 }
 
 p.description {
+  margin-top: 1em;
+  text-decoration: none;
   margin-bottom: 0;
 }
 
 .cardtext {
-  padding-bottom: 0;
+  text-decoration: none;
+  /* padding-bottom: 0; */
   width: 100%;
   background-color: #0b0c10;
   color: #fff;
@@ -445,7 +375,7 @@ p.description {
 }
 
 .bitaboutme {
-  padding-top: 1em;
+  padding-top: .5em;
   font-family: "Poppins", sans-serif;
   font-size: 2em;
   font-weight: 600;
@@ -473,7 +403,9 @@ p.description {
 
 .icons {
   height: 20vh;
-  background-color: #fff;
+   background: rgb(87,153,197);
+  background: linear-gradient(53deg, rgba(145,128,33,0.9066001400560224) 0% , rgba(87,153,197,1) 100%);
+  clip-path: polygon(100% 0, 0 0, 50% 100%);
   clip-path: polygon(100% 100%, 50% 0, 0 100%);
   width: 100vw;
   display: flex;
@@ -482,60 +414,50 @@ p.description {
 }
 
 .icons a {
+  position: relative;
+  top: 2em;
+  display: flex;
   padding: 0 2em 0 2em;
 }
 
- .icons img:hover {
-  background-color: steeleblue;
+.icons a:hover {
   transform: rotate();
-  transform: skew();
-  animation: shiver .2s linear;
+  animation: shiver .2s ease-in;
 } 
 
 @keyframes shiver {
   0% {
-    transform: skew(10deg);
-    transform: rotate(10deg);
+    transform: rotate(5deg);
   }
   10% {
-    transform: skew(5deg);
-    transform: rotate(-0deg);
+    transform: rotate(0);
   }
   20% {
-    transform: skew(0deg);
-    transform: rotate(-10deg);
+    transform: rotate(-5deg);
   }
   30% {
-    transform: skew(-5deg);
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   40% {
-    transform: skew(-10deg);
-    transform: rotate(10deg);
+    transform: rotate(5deg);
   }
   50% {
-    transform: skew(-5deg);
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   60% {
-    transform: skew(0deg);
-    transform: rotate(-10deg);
+    transform: rotate(-5deg);
   }
   70% {
-    transform: skew(5deg);
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
   80% {
-    transform: skew(10deg);
-    transform: rotate(10deg);
+    transform: rotate(5deg);
   }
   90% {
-    transform: skew(5deg);
-    transform: rotate(-10deg);
+    transform: rotate(-5deg);
   }
   100% {
-    transform: skew(0deg);
-    transform: rotate(0deg);
+    transform: rotate(0);
   }
 }
 
@@ -544,6 +466,7 @@ p.description {
   padding: 0 2em 0 2em;
   height: 2.5em;
   width: 3.5em;
+  z-index: 2;
 }
 
 .grabber {
@@ -591,37 +514,36 @@ button:hover {
 
 .emptynest {
   background-color: #0b0c10;
-  height: 20vh;
+  height: 10vh;
 }
-/* !Navigation */
-.navcontainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100vw;
-}
-
-.navbarbottom {
-  background-color: rgba(0,0,0,.7);
+/*! ...........................Navigation */
+  .navbarbottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(0,0,0,.7);
     position: fixed;
+    bottom: 0;
+    width: 100vw;
     font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    z-index: 2;
   }
 
   .navbarbottom a {
-    font-weight: 400;
-    font-size: 1.5em;
-    color: #428693;
-    align-items: center;
     text-align: center;
-    padding: 1em;
+    font-weight: 600;
+    font-size: .9em;
+    color: #fff;
+    padding: .8em;
     z-index: 2;
   }
 
+  #skillsbottom {
+    padding-left: 2em;
+  }
+
+  #contactbottom {
+    padding-right: 2em;
+  }
   .navbarbottom a:hover {
     color: rgb(182, 172, 97);
   }
@@ -632,7 +554,6 @@ button:hover {
 
   .periodw {
     color: rgb(182, 172, 97);
-    font-size: 2em;
   }
 
 
