--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,25 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat:wght@600;900&family=Poppins:wght@400;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 700px) {
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
- 
-  .navbar {
-    display: none;
+    /* overflow-x: hidden; */
   }
 
   .name {
-    margin-top: -1em;
-    height: 30vh;
+    /* margin-top: -1em; */
+    /* height: 30vh; */
     font-size: 1.8em;
   }
 
   .lastname {
-    top: -1.3em;
+    /* top: -1.3em; */
     background: url(/img/casey-horner-XE2RmuV6ed0-unsplash.jpg);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -29,8 +26,8 @@
   }
 
   .aboutsec {
-    margin-top: 1em;
-    height: 55vh;
+    /* margin-top: 1em; */
+    /* height: 55vh; */
     font-size: 2.5em;
   }
 
@@ -55,37 +52,40 @@
   }
 
   #creations {
-    padding-top: 2em;
-    background-color: rgba(250, 250, 250, .8);
-    padding-left: 1em;
-    padding-right: 1em;
-    grid-template-columns: 2fr 2fr;
+    background-color: #0b0c10;
+    display: grid;
+    grid-template-columns: 1fr 10fr 10fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 1em;
+    gap: 3em;
   }
-
-  .card {
-    border: none;
-    max-width: 50vw;
-  }
-
-  .cardtext {
-    font-size: 1.3em;
-    padding-top: 1em;
-  }
-
-  .card:nth-child(1) {
-    grid-column: 1/2;
-  }
-
-  .card:nth-child(3) {
-    grid-column: 1/2;
-    grid-row: 2/3;
-  }
-
-  .card:nth-child(4) {
-    grid-column: 2/3;
+ 
+  .cardcontainer:nth-child(1) {
     grid-row: 1/2;
+    grid-column: 2/3;
+  }
+
+  .cardcontainer:nth-child(2) {
+    grid-row: 1/2;
+    grid-column: 3/4;
+  }
+
+  .cardcontainer:nth-child(3) {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+
+  .cardcontainer:nth-child(4) {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    width: 100%;
+  }
+
+  p.description {
+    font-size: 1.2em;
+  }
+  
+  .cardimg img {
+    height: 200px;
   }
 
   .icons img {
@@ -116,34 +116,45 @@
     align-items: center;
   }
 
-  /* .navbarbottom {
-    background-color: rgba(0,0,0,.7);
-    height: 8vh;
-    width: 100vw;
-    position: fixed;
-    overflow: hidden;
-    bottom: 0;
+  .navbarbottom {
     display: flex;
     justify-content: space-evenly;
-    align-items: center; */
-    /* padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom: 1em;
+    align-items: center;
+    background-color: rgba(0,0,0,.7);
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
     font-family: "Poppins", sans-serif;
-    font-size: 2em;
-    font-weight: 900;
-    z-index: 2;
   }
 
   .navbarbottom a {
-    color: #fff;
-    align-items: center;
+    /* position: relative; */
     text-align: center;
-    padding: 1em;
+    font-weight: 600;
+    font-size: 1.5em;
+    color: #429aac;
+    padding: .8em;
+    z-index: 2;
   }
 
-  .navbarbottom a:hover {
-    color: rgba(169,161,103,.6);
+  #skillsbottom {
+    margin-left: -2em;
+  }
+
+  #contactbottom {
+    padding-right: 2em;
+  }
+  /* .navbarbottom a:hover {
+    color: rgb(182, 172, 97);
   } */
+
+  /* #workbottom:hover .periodw {
+    color: steelblue;
+  } */
+
+  /* .periodw {
+    color: rgb(182, 172, 97);
+  } */
+
 
 }
