--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  /* border: 1px solid orange; */
+
 }
 
 html {
@@ -22,10 +22,6 @@ body {
 }
 
 .name {
-
-  /* position: relative; */
-  /* top: 2em; */
-  /* height: 15vh; */
   width: 100vw;
   font-family: "Poppins", sans-serif;
   display: grid;
@@ -46,10 +42,9 @@ body {
 }
 
 .lastname {
-  /* width: 75vw; */
+
   font-size: 3.5em;
   position: relative;
-  /* left: -1em; */
   top: -1em;
   grid-column: 3/6;
   grid-row: 2/3;
@@ -193,9 +188,7 @@ body {
 }
 
 .state {
-  /* position: relative; */
   opacity: 0;
-  /* left: -1em; */
   font-family: 'Poppins', sans-serif;
   font-weight: 900;
   font-size: 1.5em;
@@ -353,7 +346,6 @@ p.description {
 
 .cardtext {
   text-decoration: none;
-  /* padding-bottom: 0; */
   width: 100%;
   background-color: #0b0c10;
   color: #fff;
@@ -519,6 +511,7 @@ button:hover {
 /*! ...........................Navigation */
   .navbarbottom {
     display: flex;
+    height: 10vh;
     justify-content: space-between;
     align-items: center;
     background-color: rgba(0,0,0,.7);
