--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,9 @@ p.description {
 }
 
 .bitaboutme {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-top: .5em;
   font-family: "Poppins", sans-serif;
   font-size: 2em;
@@ -474,6 +477,29 @@ p.description {
   grid-column: 2/5;
   grid-row: 1/4;
   width: 70vw;
+}
+.resume-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.7rem;
+  font-family: "Poppins";
+}
+.resume-container:hover {
+  animation: shiver .2s ease;
+}
+.resume {
+  font-weight: 600;
+  height: 50px;
+  z-index: 100;
+  font-size: 1.7rem;
+}
+.resume-click {
+  color: rgba(87, 153, 197, 1);
+}
+.periodr {
+  color: goldenrod;
 }
 
 #contactme {
